Implement comment system

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,47 @@
-//
+// Bootstrap
+@import "~bootstrap/scss/bootstrap";
+
+// Variables
+@import "variables";
+
+.text-gray {
+	color: $grey !important;
+}
+
+.user-image-round {
+	border-radius: 50%;
+	width: 40px;
+}
+
+.user-name {
+	font-size: 14px; 
+	font-weight: 600;
+}
+
+.timestamp {
+	font-size: 12px;
+}
+
+.user-meta-container {
+	line-height: 14px; 
+	margin-left: 10px;
+}
+
+.post-content {
+	margin-top: 20px;
+	text-align: justify; 
+}
+
+.full-width {
+	width: 100% !important;
+}
+
+.input-round {
+	input {
+		border-radius: 20px;
+	}
+}
+
+.ml-10px {
+	margin-left: 10px !important;
+}
